--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,8 +10,9 @@ spring.datasource.url=jdbc:h2:file:./registration_h2_db
 
 spring.jackson.serialization.indent-output=true
 
-spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
-spring.datasource.dbcp2.validation-query=SELECT 1
-spring.datasource.continue-on-error=false
+mail.host=smtp.office365.com
+mail.username=ENC(h+9J9HebVToqdL0C3/1q30SsOxwOIab9rZTBaoUEjAo=)
+mail.password=ENC(NT/dfwpNm0W9a310Od+wGlv12USxfP4H)
+mail.port=587
